--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-02  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/contrib.texi (Contributors): Add Daniel Berlin.
+
 2003-05-01  Rodney Brown  <rbrown64@csc.com.au>
  
       * rtl.h (subreg_offset_representable_p): Prototype.
