re PR ada/10546 (GCC 3.3, Ada tasking not working on Red Hat Linux 9)
2003-04-30  Laurent Guerby <guerby@acm.org>

	PR ada/10546
	* 5iosinte.ads: Increase pthread_cond_t size to match recent
	LinuxThread and NPTL version.

From-SVN: r66391

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-30  Laurent Guerby <guerby@acm.org>
+
+	PR ada/10546 
+	* 5iosinte.ads: Increase pthread_cond_t size to match recent
+	LinuxThread and NPTL version.
+	
 2003-03-31   Geert Bosch <bosch@gnat.com>
 
         PR ada/10020
