--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,18 @@
+2003-05-02  Richard Henderson  <rth@redhat.com>
+
+	PR c++/10570
+        * except.c: Revert 04-01 and 04-02 forced-unwind changes.
+        * flags.h, toplev.c, doc/invoke.texi: Likewise.
+
+        * unwind-dw2.c (_Unwind_GetCFA): Fix ptr->int conversion warning.
+        * unwind.inc (_Unwind_DeleteException): Check for null
+        exception_cleanup.
+   
+        * unwind-sjlj.c (_Unwind_SjLj_Resume_or_Rethrow): New.
+        * unwind.inc (_Unwind_Resume_or_Rethrow): New.
+        * unwind.h: Declare them.
+        * libgcc-std.ver (GCC_3.3): Export them.
+
 2003-05-02  Steven Bosscher  <steven@gcc.gnu.org>
 
 	* tree-inline.c (find_alloca_call):
