--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-02 Joel Sherrill  <joel.sherrill@OARcorp.com>
+	   Loren J. Rittle <ljrittle@acm.org>
+	   Martin v. Loewis  <martin@v.loewis.de>
+
+	* config/cpu/i386/atomicity.h: New file.
+
 2003-05-02  Richard Henderson  <rth@redhat.com>
 
 	PR c++/10570
