--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-05  Jason Merrill  <jason@redhat.com>
+
+	* stor-layout.c (update_alignment_for_field): Set DECL_ALIGN for
+	the field.
+
 2003-05-02  Zack Weinberg  <zack@codesourcery.com>
 
 	PR c/10604
