--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-05  David O'Brien  <obrien@FreeBSD.org>
+
+	* config/rs6000/sysv4.h (CPP_OS_FREEBSD_SPEC): Add __ELF__ to mirror
+	other FreeBSD ports.
+	(LINK_OS_FREEBSD_SPEC): Mirror conventions on other FreeBSD ports.
+
 2003-05-05  Jason Merrill  <jason@redhat.com>
 
 	* stor-layout.c (update_alignment_for_field): Set DECL_ALIGN for
