--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-05  Mark Mitchell  <mark@codesourcery.com>
+            Kean Johnston <jkj@sco.com>
+
+	* gcc.dg/unused-4.c: Update.
+	
 2003-05-02  Zack Weinberg  <zack@codesourcery.com>
 
 	PR c/10604
