--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-06  Phil Edwards  <pme@gcc.gnu.org>
+
+	* docs/html/faq/index.html (3.10):  Add note about mips atomicity.h.
+	* docs/html/faq/index.txt:  Regenerated.
+
 2003-05-02 Joel Sherrill  <joel.sherrill@OARcorp.com>
 	   Loren J. Rittle <ljrittle@acm.org>
 	   Martin v. Loewis  <martin@v.loewis.de>
