--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-06  Phil Edwards  <pme@gcc.gnu.org>
+
+	* doc/install.texi (mips-*-*):  Add note about libstdc++.
+
 2003-05-05  Mark Mitchell  <mark@codesourcery.com>
             Kean Johnston <jkj@sco.com>
 	
