--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-06  Tom Tromey  <tromey@redhat.com>
+
+	* verify.cc: Reverted previous patch.
+
 2003-05-01  Tom Tromey  <tromey@redhat.com>
 
 	PR libgcj/10582:
