--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-06  Mark Mitchell  <mark@codesourcery.com>
+
+	PR other/10658
+	* gcc.c (process_command): Update copyright date.
+
 2003-05-06  Bruce Korb  <bkorb@gnu.org>
 
 	* inclhack.def: fix up whitespace differences from mainline.
