--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* g++.dg/other/packed1.C: Mark xfail for sparc*- not sparc-.
+
 2003-05-05  Mark Mitchell  <mark@codesourcery.com>
             Kean Johnston <jkj@sco.com>
 
