--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-06  Eric Christopher  <echristo@redhat.com>
+
+        * config/mips/linux.h: Fix typo.
+
 2003-05-06  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	PR other/10650
