sh.c (gen_block_redirect, [...]): Use CODE_FOR_jump_compact instead of CODE_FOR_jump
	* sh.c (gen_block_redirect, split_branches): Use
	CODE_FOR_jump_compact instead of CODE_FOR_jump

From-SVN: r66622

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-08  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* sh.c (gen_block_redirect, split_branches): Use
+	CODE_FOR_jump_compact instead of CODE_FOR_jump
+
 2003-05-06  Eric Christopher  <echristo@redhat.com>
 
         * config/mips/linux.h: Fix typo.
