--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-12  Mark Mitchell  <mark@codesourcery.com>
+
+	PR other/10745
+	* configure.in: Correct detection of GNU ld version number.
+	* configure: Regenerated.
+
 2003-05-08  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* sh.c (gen_block_redirect, split_branches): Use
