--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,10 @@
+2003-05-12  Mark Mitchell  <mark@codesourcery.com>
+
+	* da.po: Update to latest version.
+	* es.po: Likewise.
+	* fr.po: Likewise.
+	* tr.po: Likewise.
+
 2003-02-04  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* be.po, de.po: New files.
