--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2002-11-10  Stan Shebs  <shebs@apple.com>
 
 	Retire common MPW configury bits.
