--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-04-12  Matthias Klose  <doko@debian.org>
  
 	* test_installed: Add options to run objc tests.
