--- a/fastjar/ChangeLog
+++ b/fastjar/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-03-30  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* fastjar.texi: Remove @ at start of file.
