--- a/gcc/testsuite/treelang/ChangeLog
+++ b/gcc/testsuite/treelang/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2002-05-07  Tim Josling  <tej@melbpc.org.au>
 
 	* Makefile.in: Fix copyright
