--- a/gcc/treelang/ChangeLog
+++ b/gcc/treelang/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-03-02  Matthias Klose  <doko@debian.org>
 
 	* Make-lang.in (treelang.install-info): Install all info
