--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-04-23  Loren J. Rittle  <ljrittle@acm.org>
 
 	* libI77/configure.in (_XOPEN_SOURCE): Bump to 600.
