--- a/libjava/libltdl/ChangeLog
+++ b/libjava/libltdl/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2002-04-28  Mark Mitchell  <mark@codesourcery.com>
 
 	* .cvsignore: Remove files that are present in CVS.
