--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-05-06  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.lang/verify.java: New file.
