--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-05-06  Phil Edwards  <pme@gcc.gnu.org>
 
 	* docs/html/faq/index.html (3.10):  Add note about mips atomicity.h.
