--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2002-09-23  Zack Weinberg  <zack@codesourcery.com>
 
 	* update_version: Do not check in files which are unchanged.
