--- a/boehm-gc/ChangeLog
+++ b/boehm-gc/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-04-28  Mohan Embar  <gnustuff@thisiscool.com>
 
 	* configure.in: define GC_DLL under mingw if --enable-shared
