--- a/contrib/regression/ChangeLog
+++ b/contrib/regression/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2002-10-22  Geoffrey Keating  <geoffk@apple.com>
 
 	* btest-gcc.sh: Add gdb.sum to TESTLOGS only when GDB testsuite is run.
