--- a/gcc/treelang/ChangeLog
+++ b/gcc/treelang/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-03-02  Matthias Klose  <doko@debian.org>
 
 	* Make-lang.in (treelang.install-info): Install all info
