--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-04-23  Loren J. Rittle  <ljrittle@acm.org>
 
 	* libI77/configure.in (_XOPEN_SOURCE): Bump to 600.
