--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-05-07  Jeff Sturm  <jsturm@one-point.com>
 
 	Fixes PR bootstrap/10656
