--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-04-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	PR target/10338
