--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-05-06  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc: Reverted previous patch.
