--- a/libjava/libltdl/ChangeLog
+++ b/libjava/libltdl/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2002-04-28  Mark Mitchell  <mark@codesourcery.com>
 
 	* .cvsignore: Remove files that are present in CVS.
