--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -2,6 +2,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2002-09-23  Zack Weinberg  <zack@codesourcery.com>
 
 	* update_version: Do not check in files which are unchanged.
