--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -6,6 +6,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-04-30  Laurent Guerby <guerby@acm.org>
 
 	PR ada/10546 
