--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-05-04  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* MAINTAINERS: Remove duplicate entries in Write After Approval.
