--- a/config/ChangeLog
+++ b/config/ChangeLog
@@ -10,6 +10,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2002-11-10  Stan Shebs  <shebs@apple.com>
 
 	Retire common MPW configury bits.
