--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -10,6 +10,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-05-12  Mark Mitchell  <mark@codesourcery.com>
 
 	PR other/10745
