--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -6,6 +6,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-04-11  Bud Davis <bdavis9659@comcast.net>
 
 	PR Fortran/9263
