--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -6,6 +6,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-05-12  Mark Mitchell  <mark@codesourcery.com>
 
 	* gcc.pot: Regenerate.
