--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -6,6 +6,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-05-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* g++.dg/other/packed1.C: Mark xfail for sparc*- not sparc-.
