--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -6,6 +6,10 @@
 
 	* GCC 3.3 Released.
 
+2003-05-13  Release Manager
+
+	* GCC 3.3 Released.
+
 2003-05-06  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.lang/verify.java: New file.
