--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-14  Mark Mitchell  <mark@codesourcery.com>
+
+	* version.c: Reset to prerelease format.
+	* doc/include/gcc-common.texi: Update version number.
+
 2003-05-13  Release Manager
 
 	* GCC 3.3 Released.
