--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-15  Wolfgang Bangerth <bangerth@dealii.org>
+
+	* doc/bugreport.texi: Remove most of the bug reporting
+	instructions and merge them into bugs.html.
+
 2003-05-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* sparc.c (print_operand): Fix uninitialized warning.
