--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-15  Wolfgang Bangerth <bangerth@dealii.org>
+
+	* g77.texi: Remove most of the bug reporting instructions and
+	merge them into bugs.html.
+
 2003-05-13  Release Manager
 
 	* GCC 3.3 Released.
