--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-14  Loren J. Rittle  <ljrittle@acm.org>
+        
+	* testsuite/thread/pthread4.cc: Tweak test.
+
 2003-05-13  Release Manager
 
 	* GCC 3.3 Released.
