--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,14 +1,14 @@
-2003-05-13  Release Manager
+2003-05-15  Jason Merrill  <jason@redhat.com>
 
-	* GCC 3.3 Released.
+	PR c++/5388
+	* call.c (conditional_conversion): Don't consider implicit
+	conversions if T2 is a base of T1. 
+	* cp-tree.h (DERIVED_FROM_P, UNIQUELY_DERIVED_FROM_P): Make boolean.
+	(ACCESSIBLY_UNIQUELY_DERIVED_P, PUBLICLY_UNIQUELY_DERIVED_P): Likewise.
 
-2003-05-13  Release Manager
-
-	* GCC 3.3 Released.
-
-2003-05-13  Release Manager
-
-	* GCC 3.3 Released.
+	PR c++/10661
+	* pt.c (instantiate_class_template): Also instantiate our
+	enclosing class.
 
 2003-05-13  Release Manager
 
@@ -17,9 +17,9 @@
 2003-05-02  Richard Henderson  <rth@redhat.com>
 
 	PR c++/10570
-        * cfns.gperf: Comment out POSIX thread cancellation points,
-        plus abort and raise.
-        * cfns.h: Regenerate.
+	* cfns.gperf: Comment out POSIX thread cancellation points,
+	plus abort and raise.
+	* cfns.h: Regenerate.
 
 2003-05-01  Mark Mitchell  <mark@codesourcery.com>
 
