crash2.C: Use "(parse|syntax)" error.
2003-05-16  Matthias Klose  <doko@debian.org>

	* parse/crash2.C: Use "(parse|syntax)" error.

	Backport from mainline

	2003-03-17  Zack Weinberg  <zack@codesourcery.com>

		* objc.dg/naming-1.m: Use "(parse|syntax)" error.
		* objc.dg/naming-2.m: Likewise.

From-SVN: r66857

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,14 @@
+2003-05-16  Matthias Klose  <doko@debian.org>
+
+	* parse/crash2.C: Use "(parse|syntax)" error.
+
+	Backport from mainline
+
+	2003-03-17  Zack Weinberg  <zack@codesourcery.com>
+
+		* objc.dg/naming-1.m: Use "(parse|syntax)" error.
+		* objc.dg/naming-2.m: Likewise.
+
 2003-05-13  Release Manager
 
 	* GCC 3.3 Released.
