--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-16  Wolfgang Bangerth <bangerth@dealii.org>
+
+	* doc/bugreport.texi: Remove most of the preface of the
+	bugs section.
+
 2003-05-16  Nick Clifton  <nickc@redhat.com>
 
 	* config/mcore/mcore.md (jump): Use emit_jump_insn to generate the
