--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-16  Wolfgang Bangerth <bangerth@dealii.org>
+
+	* g77.texi: Remove most of the preface of the bugs section.
+
 2003-05-15  Wolfgang Bangerth <bangerth@dealii.org>
 
 	* g77.texi: Remove most of the bug reporting instructions and
