--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-17  Nathan Myers  <ncm@cantrip.org>
+
+	* include/bits/streambuf.tcc (__copy_streambufs): Rewrote.
+
 2003-05-15  Phil Edwards  <pme@gcc.gnu.org>
 
 	* testsuite/Makefile.am:  Properly quote LD_RUN_PATH.
@@ -26,15 +30,15 @@
 2003-05-02  Richard Henderson  <rth@redhat.com>
 
 	PR c++/10570
-        * libsupc++/eh_catch.cc (__cxa_begin_catch): Handle foreign exceptions.
-        (__cxa_end_catch): Likewise.
-        * libsupc++/eh_throw.cc (__cxa_rethrow): Likewise.  Use
-        _Unwind_Resume_or_Rethrow.
-        * libsupc++/eh_personality.cc (empty_exception_spec): New.
-        (PERSONALITY_FUNCTION): Don't ignore terminate or catch-all
-        for _UA_FORCE_UNWIND.  Honor empty filter spec for foreign
-        exceptions.  Don't push terminate/unexpected to cxa functions.
-        (__cxa_call_unexpected): Remove foreign exception fixmes.
+	* libsupc++/eh_catch.cc (__cxa_begin_catch): Handle foreign exceptions.
+	(__cxa_end_catch): Likewise.
+	* libsupc++/eh_throw.cc (__cxa_rethrow): Likewise.  Use
+	_Unwind_Resume_or_Rethrow.
+	* libsupc++/eh_personality.cc (empty_exception_spec): New.
+	(PERSONALITY_FUNCTION): Don't ignore terminate or catch-all
+	for _UA_FORCE_UNWIND.  Honor empty filter spec for foreign
+	exceptions.  Don't push terminate/unexpected to cxa functions.
+	(__cxa_call_unexpected): Remove foreign exception fixmes.
 
 2003-05-01  Benjamin Kosnik  <bkoz@redhat.com>
 
