--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,10 @@
+2003-05-18  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	PR fortran/10726
+	* intdoc.in: Fix documentation of IDATE.
+	* intdoc.texi: Regenerate.
+	* news.texi: Update due to the above.
+
 2003-05-16  Wolfgang Bangerth <bangerth@dealii.org>
 
 	* g77.texi: Remove most of the preface of the bugs section.
