--- a/gcc/f/intdoc.texi
+++ b/gcc/f/intdoc.texi
@@ -5893,9 +5893,9 @@ Intrinsic groups: @code{unix}.
 @noindent
 Description:
 
-Fills @var{TArray} with the numerical values at the current local time
-of day, month (in the range 1--12), and year in elements 1, 2, and 3,
-respectively.
+Fills @var{TArray} with the numerical values at the current local time.
+The day (in the range 1--31), month (in the range 1--12),
+and year appear in elements 1, 2, and 3 of @var{TArray}, respectively.
 The year has four significant digits.
 
 @cindex Y10K compliance
@@ -5941,19 +5941,20 @@ Description:
 
 Returns the numerical values of the current local time.
 The month (in the range 1--12) is returned in @var{M},
-the day (in the range 1--7) in @var{D},
+the day (in the range 1--31) in @var{D},
 and the year in @var{Y} (in the range 0--99).
 
 @cindex Y2K compliance
 @cindex Year 2000 compliance
 @cindex wraparound, Y2K
 @cindex limits, Y2K
-This intrinsic is not recommended, due to the year 2000 approaching.
-Therefore, programs making use of this intrinsic
-might not be Year 2000 (Y2K) compliant.
+This intrinsic is not recommended, due to the fact that
+its return value for year wraps around century boundaries
+(change from a larger value to a smaller one).
+Therefore, programs making use of this intrinsic, for
+instance, might not be Year 2000 (Y2K) compliant.
 For example, the date might appear,
 to such programs, to wrap around
-(change from a larger value to a smaller one)
 as of the Year 2000.
 
 @xref{IDate Intrinsic (UNIX)}, for information on obtaining more digits
