--- a/gcc/f/news.texi
+++ b/gcc/f/news.texi
@@ -10,7 +10,7 @@
 @c in the standalone derivations of this file (e.g. NEWS).
 @set copyrights-news 1995,1996,1997,1998,1999,2000,2001,2002,2003
 
-@set last-update-news 2003-04-11
+@set last-update-news 2003-05-18
 
 @ifset DOC-NEWS
 @include root.texi
@@ -190,6 +190,8 @@ Double complex zero ** double precision number -> NaN instead of zero
 ICE caused by invalid PARAMETER in implied DO loop
 @item 10197
 Direct access files not unformatted by default
+@item 10726
+Documentation for function IDATE Intrinsic (UNIX) is wrong [fixed in 3.3.1].
 @end table
 @item
 Richard Henderson (@email{rth@@redhat.com}) analyzed and improved the handling
