--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2003-05-19  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	Backport from mainline:
+
+	2003-05-10  Alexander Aganichev  <aaganichev@yandex.ru>
+
+	* config/i386/i386.h (MODES_TIEABLE_P): Fix typo.
+
 2003-05-16  Wolfgang Bangerth <bangerth@dealii.org>
 
 	* doc/bugreport.texi: Remove most of the preface of the
